// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox deve conter a classe css "disabled" 1`] = `
<label
  class="checkbox_13xlah4-o_O-checkboxDisabled_14ak7oz"
>
  <input
    class="input_1uzp2sp"
    disabled=""
    type="checkbox"
  />
  <span
    class="check_1yv4wi9"
  />
  <span
    class="label_hqebz6"
  >
    check
  </span>
</label>
`;

exports[`Checkbox deve renderizar corretamente 1`] = `
<label
  class="checkbox_13xlah4"
>
  <input
    class="input_1uzp2sp"
    type="checkbox"
  />
  <span
    class="check_1yv4wi9"
  />
  <span
    class="label_hqebz6"
  >
    check
  </span>
</label>
`;
